@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="2.0.0" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="2.0.1" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0" />
 		<import addon="script.module.tulip" version="2.4.1" />
@@ -19,7 +19,10 @@
 		<source>https://github.com/Twilight0/plugin.video.alphatv.gr</source>
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
-		<news>[B]2.0.0[/B]
+		<news>[B]2.0.1[/B]
+- Minor fix for cypriot episode indexers
+
+[B]2.0.0[/B]
 - Rework of the addon, new indexers, new stream resolver
 - Replaced item based selection of country with a selector to switch between regions
 - Bumped dependencies</news>
